did a little proof read of the copy

--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
 		<!-- <div class="section-content spacer"></div> -->
 		<!-- </div> -->
 
-
-
 		<div class="row">
 			<div class="section-title" id="first-section-title">
 				<h3 id="olliolli-world">OlliOlli World <span class="year"> 2022</span></h3>
@@ -45,9 +43,9 @@
 
 				<p>OlliOlli World is an exhilarating skating action platformer, set in the vibrant quirky and cozy world
 					of Radlandia.</p>
-				<p>On the project <strong>my main achievement was writing the <em>No Comply Renderer</em></strong>,
-					which is responsible for rendering the game. By harnessing <em>Unity&#39;s Scriptable Render
-						Pipeline</em>. <strong>Which makes the distinctive cartoon art style possible.</strong></p>
+				<p>On the project <strong>my main achievement was writing the <em>No Comply Renderer</em></strong>.
+					Which is responsible for rendering the game, by harnessing <em>Unity&#39;s Scriptable Render
+						Pipeline</em>. <strong>Creating it&#39;s distinctive cartoon art style.</strong></p>
 				<p>The <em>No Comply Renderer</em> is the many <strong>shaders used on the characters, environment, and
 						post processes</strong>. As well as the code that glues it all together.</p>
 				<button type="button" class="collapsible">More...</button>
@@ -57,27 +55,26 @@
 						continuation of the evolving colour story that&#39;s building through each of biome.</p>
 					<div class='slideOver-Background' id='imageSlide-CB-Tree'>
 						<div class='slideOver-Foreground' id='imageSlide-CB-Forest'>
-						<textarea readonly cols='0' rows='0' class='slider'></textarea>
+							<textarea readonly cols='0' rows='0' class='slider'></textarea>
 						</div>
 					</div>
-					
+
 					<p>I created a <strong><em>Meta Gradient Texture</em> system and workflow for the artists to
 							use.</strong> Every environment asset is mapped to a shared texture, which is responsible
 						for the colour that you see in the level. </p>
 					<p>This had the dual benefits of allowing the Lead Artist to direct and change the feel of the level
-						as a whole, any time even once the 3D art was finalised and completely non-destructively. As
-						well as meaning an artist creating a level could easily take art from different levels and reuse
-						them. The colours of this asset already matching the rest of the current environment, as soon as
-						you drop it in the level.</p>
-					
+						as a whole, any time and completely non-destructively. As well as meaning an artist creating a
+						level could easily take art from different levels and reuse them. The colours of this asset
+						already matching the rest of the current environment, as soon as you drop it in the level.</p>
+
 					<div class='slideOver-Background' id='imageSlide-SV-Atlantic'>
 						<div class='slideOver-Foreground' id='imageSlide-SV-Sea'>
-						<textarea readonly cols='0' rows='0' class='slider'></textarea>
+							<textarea readonly cols='0' rows='0' class='slider'></textarea>
 						</div>
 					</div>
-					<p>I also supported the 3D artists which their art creation process, this style of rendering needing
-						the art to be made in a novel way. As well as support going from 3D software to engine, and in
-						engine tools.</p>
+					<p>I also supported the 3D artists with their art creation process, this style of rendering needing
+						the art to be made in a non-standard way. Including quality of life improvements in their art
+						programs, going from 3D software to engine, and in engine tools.</p>
 				</div>
 			</div>
 		</div>
@@ -103,22 +100,22 @@
 						Rollerdrome at the same time.</strong></p>
 				<p>Rollerdrome is a fast and blisteringly fun combat chess game on rollerskates. If Tony Hawk Pro Skater
 					and Doom had a baby, it would probably look like Rollerdrome.</p>
-				<p>Rollerdrome targeting next gen meant there was extra graphics hardware. Which meant getting to write
+				<p>Rollerdrome targeting next gen meant there was extra graphics headroom. Which meant getting to write
 					additional rendering features like a decal system. As well as <strong>writing the core shaders for
 						the characters, environments, and post processes.</strong> </p>
 				<button type="button" class="collapsible">More...</button>
 				<div class="more-content">
 					<p>As I was sharing my time between the two projects and they had similar artistic needs many of
-						<strong>the tools and workflows were designed with being project agnostic</strong>. And also was
-						designed with modularity and performance in mind, supporting low end devices like OlliOlli World
-						targeting 60 fps on Nintendo Switch, up to Rollerdrome targeting 4k 120fps on Playstation 5.
+						<strong>the tools and workflows were designed to be project agnostic</strong>. With modularity
+						and performance in mind, supporting low end devices like OlliOlli World targeting 60 fps on
+						Nintendo Switch, up to Rollerdrome targeting 4k 120fps on Playstation 5.
 					</p>
 					<p>The <em>Meta Gradient Texture</em> system for example, was in both projects. As was much of the
 						workflow used by artists. This was good because despite having a non-standard art pipeline,
 						artists could be shared between both projects when it was required, with little retraining.</p>
 					<img src="Images/Rollerdrome-Ice.jpg" width="100%">
-					<p>I&#39;m very fond of character lighting in Rollerdrome. Because the visuals are so stylised, and
-						the gameplay fast paced, we decided to divorce the character lighting from the environment. The
+					<p>I&#39;m very fond of character lighting in Rollerdrome. The visuals are so stylised, and the
+						gameplay fast paced, we decided to divorce the character lighting from the environment. The
 						lighting and shadow drawn by the player are directed by special volumes placed by the
 						environment artists. This keeps the player clear and readable no matter where they are, or how
 						frantic the action.</p>
@@ -176,7 +173,8 @@
 						best</strong> from our low end platform of Gear VR, up to PSVR and high end PC VR rigs.</p>
 				<p>I stayed on to do additional support for the environment art team. Creating shaders, VFX, and the
 					<strong>novel Level Of Detail system used to support the limited draw distance of the
-						hardware</strong>, while fitting in the artistic tone of the world.</p>
+						hardware</strong>, while fitting in the artistic tone of the world.
+				</p>
 
 
 			</div>
