added some full stops

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 					<img  src="Images/me.jpg" width="100%" height="auto">
 				</div>
 				<div id="special-bio">
-					<p>Hey there weary traveller</p>
-					<p>I write shaders, do art sometimes</p>
-					<p>Check out some of the games I've worked on below</p>
-					<p>Website still work in progress</p>
+					<p>Hey there weary traveller.</p>
+					<p>I write shaders, do art sometimes.</p>
+					<p>Check out some of the games I've worked on below.</p>
+					<p>Website still work in progress.</p>
 				</div>
 			</div>
 		</div>
@@ -120,7 +120,7 @@
 				<p>While working on OlliOlli World, Roll7 had another team prototyping Rollerdrome. <strong>I wrote the
 						<em>No Comply Renderer</em> to be flexible and support the art styles of both OlliOlli World and
 						Rollerdrome at the same time.</strong></p>
-				<p>Rollerdrome is a fast and blisteringly fun combat chess game on rollerskates. If Tony Hawk Pro Skater
+				<p>Rollerdrome is the Bafta winning, fast and blisteringly fun combat chess game on rollerskates. If Tony Hawk Pro Skater
 					and Doom had a baby, it would probably look like Rollerdrome.</p>
 				<p>Rollerdrome targeting next gen meant there was extra graphics headroom. Which meant getting to write
 					additional rendering features like a decal system. As well as <strong>writing the core shaders for
