added a contact link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 				<div id="special-bio">
 					<p>Hey there weary traveller.</p>
 					<p>I write shaders, do art sometimes.</p>
+					<p>You can <a href='mailto:null-techie.0e@icloud.com'>contact me here.</a></p>
 					<p>Check out some of the games I've worked on below.</p>
+					<br>
 					<p>Website still work in progress.</p>
 				</div>
 			</div>
