added details about develop talk

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
 		<!-- <div class="section-content spacer"></div> -->
 		<!-- </div> -->
 
+		<div class="row centered">
+			<div class="section-title">
+				<h3 id='talk'>Come See Me Talk!<span class="year"> 2024</span></h3>
+				<p>Wednesday, 10th of July</p>
+				<p>2:00pm, Room 2</p>
+			</div>
+			<div class="section-content">
+				<p><b>I will be a speaker at Develop 2024!</b></p>
+				<p>You can see me talk about <b><a href="https://www.developconference.com/speakers/aubrey-mccarthy" target="_blank">Everything I Learned Making Art For Illustrative Styles</a></b></p>
+			</div>
+		</div>
+
+
 		<div class="row">
 			<div class="section-title" id="first-section-title">
 				<h3 id="olliolli-world">OlliOlli World <span class="year"> 2022</span></h3>
